🐛 FIX: Align left sidebar
Thanks for the feedback @mgmeyers!

--- a/material.css
+++ b/material.css
@@ -297,9 +297,13 @@ span.cm-hashtag.cm-hashtag-end {
 /* ------------- */
 
 /* Branding "Obsidian You" */
+.workspace-drawer-header {
+  padding: 10px 20px 0 10px;
+}
+
 .workspace-drawer-header::before {
   content: 'Obsidian ';
-  margin: 10px;
+  margin: 10px 12px 10px 12px;
   font-size: var(--h4);
   color: var(--primary-dark);
   clear: right;
@@ -319,7 +323,11 @@ span.cm-hashtag.cm-hashtag-end {
 
 .workspace-drawer-header {
   border-bottom: 1px solid var(--background-secondary-alt);
+}
 
+/* Title of 'File explorer' and the like */
+.workspace-drawer-active-tab-header {
+  margin: 20px -1px 20px 11px;
 }
 
 .workspace-drawer-header-name-text {
@@ -343,10 +351,19 @@ span.cm-hashtag.cm-hashtag-end {
 
 
 /* Top buttons */
-.is-mobile .workspace-drawer-actions, .is-mobile .nav-buttons-container {
+.is-mobile .workspace-drawer-actions, 
+.is-mobile .nav-buttons-container {
     background-color: var(--background-secondary);
     border-radius: var(--big-radius);
-    margin: 0 10px 5px;
+    margin: 0 11px 10px;
+  }
+
+.is-mobile .workspace-leaf-content[data-type='search'] 
+.nav-action-button {
+  margin: 0px 2px 2px 0;
+  text-align:center;
+  height:36px;
+  cursor:var(--cursor);
 }
 
 .nav-action-button {
@@ -371,10 +388,15 @@ span.cm-hashtag.cm-hashtag-end {
 /* ------------- */
 /* # File explorer */
 /* ------------- */
+/* Folder */
+.nav-folder-title-content {
+  padding-left: 0px;
+}
+
 .nav-file-title-content, 
 .nav-folder-title-content {
     font-size: var(--smaller);
-    padding: 0px 4px;
+    padding: 0px 0px;
     font-weight: var(--medium);
 }
 
@@ -382,7 +404,7 @@ span.cm-hashtag.cm-hashtag-end {
 .is-mobile .nav-file-title,
 .is-mobile .outline, 
 .is-mobile .tag-container {
-  padding: 1px 10px 0 14px;
+  padding: 1px 11px 0 11px;
   color: var(--text-muted);
   font-size: var(--smaller);
   font-weight: var(--light);
@@ -395,14 +417,20 @@ span.cm-hashtag.cm-hashtag-end {
   border-radius: var(--small-radius);
 }
 
-
-/* Folders */
+/* Left sidebar */
 .workspace-drawer.mod-left {
-      border-radius: 0px 6px 0 0;
+  border-right: 1px var(--background-primary) solid !important;
 }
 
+/* Ribbon */
 .workspace-drawer-ribbon {
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
+}
+
+.workspace-drawer-tab-option-item {
+  margin-left: 12px;
+  margin-right: 12px;
+
 }
 
 .workspace-drawer-tab-option-item-title, .workspace-drawer-active-tab-title {
